1003.2-92 specifies the string "--" to be recognized as the option list delimiter as opposed to any string merely beginning with '-''-'; change to match the standard.  From Simon J. Gerraty <sjg@quick.com.au> in PR lib/6762.